Add flag for removing prefix and help flag
Add help flag, "-h" or "--help".  When added to command, prints out help message
describing available flags.  Add no prefix flag, "-n" or "--no-prefix", which removes
date and device from beginning of log lines.

--- a/control
+++ b/control
@@ -1,10 +1,10 @@
-Package: com.eswick.ondeviceconsole
+Package: com.cgm616.ondeviceconsole
 Name: ondeviceconsole
-Depends: 
-Version: 1.0.0
+Depends:
+Version: 1.0.1
 Architecture: iphoneos-arm
 Description: Tool to view system log from the shell.
-Maintainer: Evan Swick
-Author: Evan Swick
+Maintainer: cgm616
+Author: Evan Swick and cgm616
 Section: System
 Tag: role::hacker
